unpackaged/main/default/objects/shop__c/fields/Send_Digital_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Send_Digital_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field getting checked/unchecked by FLOW_SEND_DIGITAL_CERTIFICATE_SFMC_TRIGGER and triggers Marketing Cloud Email Automation</description>
    <label>Send Digital Certificate?</label>
    <type>Checkbox</type>
</CustomField>