unpackaged/main/default/objects/shop__c/fields/shop_contact_info__c.field-meta.xml
<CustomField>
    <fullName>shop_contact_info__c</fullName>
    <formula>&quot;E-Mail: &quot; + contact__r.Email +  BR() +  
&quot;Phone:  &quot; +  contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Contact Info</label>
    <type>Text</type>
</CustomField>