unpackaged/main/default/objects/shop__c/fields/shop_industries__c.field-meta.xml
<CustomField>
    <fullName>shop_industries__c</fullName>
    <label>Shop Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Household goods &amp; household equipment</fullName>
            </value>
            <value>
                <fullName>Jewellery &amp; watches</fullName>
            </value>
            <value>
                <fullName>Furniture &amp; decorative accessories</fullName>
            </value>
            <value>
                <fullName>Chemists &amp; cosmetics</fullName>
            </value>
            <value>
                <fullName>Opticians</fullName>
            </value>
            <value>
                <fullName>Office, school &amp; business supplies</fullName>
            </value>
            <value>
                <fullName>Computers, electronics &amp; accessories</fullName>
            </value>
            <value>
                <fullName>Toys, baby &amp; children</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Photo, print &amp; book-on-demand</fullName>
            </value>
            <value>
                <fullName>Sports goods</fullName>
            </value>
            <value>
                <fullName>Music &amp; film</fullName>
            </value>
            <value>
                <fullName>Hobbys, collecting &amp; freetime products</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Telecommunication</fullName>
            </value>
            <value>
                <fullName>Cars, motorbikes &amp; accessories</fullName>
            </value>
            <value>
                <fullName>Luggage, bags &amp; leather goods</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
            <value>
                <fullName>Pet supplies</fullName>
            </value>
            <value>
                <fullName>Gardening supplies</fullName>
            </value>
            <value>
                <fullName>Luxury foods, drinks &amp; tobacco</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Hotels</fullName>
            </value>
            <value>
                <fullName>Erotica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>