unpackaged/main/default/objects/shop__c/fields/shop_industry__c.field-meta.xml
<CustomField>
    <fullName>shop_industry__c</fullName>
    <label>Primary Shop Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agencies, Consultants, Media, IT</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Carnival, fancy dress costumes</fullName>
            </value>
            <value>
                <fullName>Cars, motorbikes &amp; accessories</fullName>
            </value>
            <value>
                <fullName>Chemical and building materials industry</fullName>
            </value>
            <value>
                <fullName>Chemists &amp; cosmetics</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Computers, electronics &amp; accessories</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Electrical engineer</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Erotica</fullName>
            </value>
            <value>
                <fullName>Finance &amp; insurance</fullName>
            </value>
            <value>
                <fullName>Floristry</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Furniture &amp; decorative accessories</fullName>
            </value>
            <value>
                <fullName>Gardening supplies</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hobbys, collecting &amp; freetime products</fullName>
            </value>
            <value>
                <fullName>Household goods &amp; household equipment</fullName>
            </value>
            <value>
                <fullName>Jewellery &amp; watches</fullName>
            </value>
            <value>
                <fullName>Luggage, bags &amp; leather goods</fullName>
            </value>
            <value>
                <fullName>Luxury foods</fullName>
            </value>
            <value>
                <fullName>Mechanical engineering, vehicle construction</fullName>
            </value>
            <value>
                <fullName>Municipal, Community</fullName>
            </value>
            <value>
                <fullName>Music &amp; film</fullName>
            </value>
            <value>
                <fullName>Office, school &amp; business supplies</fullName>
            </value>
            <value>
                <fullName>Opticians</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>