unpackaged/main/default/objects/shop__c/fields/Shop_Insights__c.field-meta.xml
<CustomField>
    <fullName>Shop_Insights__c</fullName>
    <formula>IF (NOT(ISBLANK(TEXT(target_market__c ))), (HYPERLINK(&quot;https://trustedshops.&quot;+
CASE
(target_market__c,
&quot;AUT&quot;,&quot;at/bewertung/info_&quot;,
&quot;BEL&quot;,CASE(language__c,&quot;nl&quot;,&quot;be/nl/verkopersbeoordeling/info_&quot;,&quot;be/fr/evaluation/info_&quot;),
&quot;FRA&quot;,&quot;fr/evaluation/info_&quot;,
&quot;DEU&quot;,&quot;de/bewertung/info_&quot;,
&quot;GBR&quot;,&quot;co.uk/buyerrating/info_&quot;,
&quot;ITA&quot;,&quot;it/valutazione-del-negozio/info_&quot;,
&quot;NLD&quot;,&quot;nl/verkopersbeoordeling/info_&quot;,
&quot;POL&quot;,&quot;pl/opinia/info_&quot;,
&quot;CHE&quot;,&quot;ch/bewertung/info_&quot;,
&quot;ESP&quot;,&quot;es/evaluacion/info_&quot;,
&quot;PRT&quot;,&quot;pt/avaliacao/info_&quot;,
&quot;ROU&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;SWE&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;DNK&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;CZE&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;EUO&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;AT&quot;,&quot;at/bewertung/info_&quot;,
&quot;BE&quot;,CASE(language__c,&quot;nl&quot;,&quot;be/nl/verkopersbeoordeling/info_&quot;,&quot;be/fr/evaluation/info_&quot;),
&quot;FR&quot;,&quot;fr/evaluation/info_&quot;,
&quot;DE&quot;,&quot;de/bewertung/info_&quot;,
&quot;GB&quot;,&quot;co.uk/buyerrating/info_&quot;,
&quot;IT&quot;,&quot;it/valutazione-del-negozio/info_&quot;,
&quot;NL&quot;,&quot;nl/verkopersbeoordeling/info_&quot;,
&quot;PL&quot;,&quot;pl/opinia/info_&quot;,
&quot;CH&quot;,&quot;ch/bewertung/info_&quot;,
&quot;ES&quot;,&quot;es/evaluacion/info_&quot;,
&quot;PT&quot;,&quot;pt/avaliacao/info_&quot;,
&quot;RO&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;SE&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;DK&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;CZ&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;EU&quot;,&quot;eu/buyerrating/info_&quot;,
&quot;not available&quot;)
+ts2_id__c+&quot;.html&quot;,&quot;Show Shop Profile&quot;)), &quot;No Shop Profile available&quot;)
&amp; &quot;&quot; &amp; IF( NOT(ISBLANK(eTrusted_Channel_Reference__c)), BR() + HYPERLINK(&quot;https://employees.trustedshops.com/analytics/invite-conversion?analyticsChannelId=&quot;+ eTrusted_Channel_Reference__c, &quot;Invite Performance Dashboard&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Insights</label>
    <type>Text</type>
</CustomField>