unpackaged/main/default/objects/shop__c/fields/Shop_Kategorien__c.field-meta.xml
<CustomField>
    <fullName>Shop_Kategorien__c</fullName>
    <label>Shop Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARS_MOTORBIKES_ACCESSORIES</fullName>
                <label>Cars, Motorbikes &amp; Accessories</label>
            </value>
            <value>
                <fullName>DIY</fullName>
                <label>Diy</label>
            </value>
            <value>
                <fullName>CLOTHING</fullName>
                <label>Clothing</label>
            </value>
            <value>
                <fullName>BOOKS</fullName>
                <label>Books</label>
            </value>
            <value>
                <fullName>OFFICE_SCHOOL_BUSINESS_SUPPLIES</fullName>
                <label>Office, School &amp; Business Supplies</label>
            </value>
            <value>
                <fullName>COMPUTERS_ELECTRONICS_ACCESSORIES</fullName>
                <label>Computers, Electronics &amp; Accessories</label>
            </value>
            <value>
                <fullName>CONSULTING</fullName>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>CHEMISTS_COSMETICS</fullName>
                <label>Chemists &amp; Cosmetics</label>
            </value>
            <value>
                <fullName>PRECIOUS_METALS</fullName>
                <label>Precious Metals</label>
            </value>
            <value>
                <fullName>ENERGY</fullName>
                <label>Energy</label>
            </value>
            <value>
                <fullName>EROTICA</fullName>
                <label>Erotica</label>
            </value>
            <value>
                <fullName>FINANCE_INSURANCE</fullName>
                <label>Finance Insurance</label>
            </value>
            <value>
                <fullName>FLORISTY</fullName>
                <label>Floristy</label>
            </value>
            <value>
                <fullName>PHOTO_PRINT_BOOK_ON_DEMAND</fullName>
                <label>Photo, Print &amp; Book-on-Demand</label>
            </value>
            <value>
                <fullName>GARDENING_SUPPLIES</fullName>
                <label>Gardening Supplies</label>
            </value>
            <value>
                <fullName>LUXURY_FOOD_INDUSTRY</fullName>
                <label>Luxury Food Industry</label>
            </value>
            <value>
                <fullName>GIFTS</fullName>
                <label>Gifts</label>
            </value>
            <value>
                <fullName>HOUSEHOLD_GOODS_HOUSEHOLD_EQUIPMENT</fullName>
                <label>Households Goods &amp; Household Equipment</label>
            </value>
            <value>
                <fullName>HOBBYS_COLLECTING_FREETIME_PRODUCTS</fullName>
                <label>Hobbys, Collecting &amp; Freetime Products</label>
            </value>
            <value>
                <fullName>CARNIVAL_FANCY_DRESS_COSTUMES</fullName>
                <label>Carnival &amp; Fancy Dress Costumes</label>
            </value>
            <value>
                <fullName>LUGGAGE_BAGS_LEATHER_GOODS</fullName>
                <label>Luggage, Bags &amp; Leather Goods</label>
            </value>
            <value>
                <fullName>FOOD</fullName>
                <label>Food</label>
            </value>
            <value>
                <fullName>PHARMACEUTICALS</fullName>
                <label>Pharmaceuticals</label>
            </value>
            <value>
                <fullName>FURNITURE_DECORATIVE_ACCESSORIES</fullName>
                <label>Furniture &amp; Decorative Accessories</label>
            </value>
            <value>
                <fullName>MUSIC_FILM</fullName>
                <label>Music &amp; Film</label>
            </value>
            <value>
                <fullName>OPTICIANS</fullName>
                <label>Opticians</label>
            </value>
            <value>
                <fullName>TRAVEL_HOTELS</fullName>
                <label>Travel &amp; Hotels</label>
            </value>
            <value>
                <fullName>JEWELLERY_WATCHES</fullName>
                <label>Jewellery &amp; Watches</label>
            </value>
            <value>
                <fullName>SHOES</fullName>
                <label>Shoes</label>
            </value>
            <value>
                <fullName>TOYS_BABY_CHILDREN</fullName>
                <label>Toys, Baby &amp; Children</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>