unpackaged/main/default/objects/shop__c/fields/Shop_online_since__c.field-meta.xml
<CustomField>
    <fullName>Shop_online_since__c</fullName>
    <label>Shop online since</label>
    <type>Date</type>
</CustomField>