unpackaged/main/default/objects/shop__c/fields/Shop_Reviews_daily__c.field-meta.xml
<CustomField>
    <fullName>Shop_Reviews_daily__c</fullName>
    <description>Yesterday&#39;s number of Shop Reviews</description>
    <label>Shop Reviews (daily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>