unpackaged/main/default/objects/shop__c/fields/Shop_Reviews_percent__c.field-meta.xml
<CustomField>
    <fullName>Shop_Reviews_percent__c</fullName>
    <formula>IF(Expected_Shop_Reviews_daily__c=0,-1,Shop_Reviews_daily__c / Expected_Shop_Reviews_daily__c)</formula>
    <label>Shop Reviews (percent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>