unpackaged/main/default/objects/shop__c/fields/shopkeeper__c.field-meta.xml
<CustomField>
    <fullName>shopkeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shopkeeper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Is Shopkeeper for</relationshipLabel>
    <relationshipName>ShopkeeperShops</relationshipName>
    <type>Lookup</type>
</CustomField>