unpackaged/main/default/objects/shop__c/fields/Shopping_Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart_Value__c</fullName>
    <label>Shopping Cart Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>