unpackaged/main/default/objects/shop__c/fields/shopsoftware__c.field-meta.xml
<CustomField>
    <fullName>shopsoftware__c</fullName>
    <description>ATTENTION! values need to be aligned at all time with the shop software field on the object enrichment_result__c
When adding/removing values, please update this page: https://wiki.trustedshops.com/display/Operations/Shop+Software+Values</description>
    <label>Shop Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shop_Software</valueSetName>
    </valueSet>
</CustomField>