unpackaged/main/default/objects/shop__c/fields/Shopsoftware_Premium__c.field-meta.xml
<CustomField>
    <fullName>Shopsoftware_Premium__c</fullName>
    <formula>IF(
CASE(Text(shopsoftware__c), 
 &quot;4SELLERS&quot;,1,
 &quot;CLICKSHOP&quot;,1,
 &quot;COMARCH&quot;,1,
 &quot;HYBRIS&quot;,1,
 &quot;IBM WEBSPHERE&quot;,1,
 &quot;INTERSHOP&quot;,1,
 &quot;ISKELP&quot;,1,
 &quot;JTL&quot;,1,
 &quot;MAGENTO&quot;,1,
 &quot;OXID_ESALES&quot;,1,
 &quot;POWERGAP&quot;,1,
 &quot;PRESTA&quot;,1,
 &quot;SHOPWARE&quot;,1,
 &quot;VISUALSOFT&quot;,1,
 &quot;WEBSALE&quot;,1,
 &quot;XTCMODIFIED&quot;,1,
 &quot;XTC_VEYTON&quot;,1,
0) = 1,
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shopsoftware Premium</label>
    <type>Checkbox</type>
</CustomField>