unpackaged/main/default/objects/shop__c/fields/SI_Parameter_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>SI_Parameter_E_Mail__c</fullName>
    <description>set by SI Daily Batch</description>
    <label>SI Parameter E-Mail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>provided</fullName>
            </value>
            <value>
                <fullName>not provided</fullName>
            </value>
            <value>
                <fullName>provided without SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>