unpackaged/main/default/objects/shop__c/fields/SI_Parameter_Order_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>SI_Parameter_Order_Payment_Type__c</fullName>
    <label>SI Parameter Order Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>provided</fullName>
            </value>
            <value>
                <fullName>not provided</fullName>
            </value>
            <value>
                <fullName>provided without SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>