unpackaged/main/default/objects/shop__c/fields/SI_Status_valid_until__c.field-meta.xml
<CustomField>
    <fullName>SI_Status_valid_until__c</fullName>
    <description>for product Usage</description>
    <label>SI Status valid until</label>
    <type>Date</type>
</CustomField>