unpackaged/main/default/objects/shop__c/fields/SI_true_since__c.field-meta.xml
<CustomField>
    <fullName>SI_true_since__c</fullName>
    <label>SI true since</label>
    <type>Date</type>
</CustomField>