unpackaged/main/default/objects/shop__c/fields/silent_trustbadge__c.field-meta.xml
<CustomField>
    <fullName>silent_trustbadge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Silent Trustbadge</label>
    <type>Checkbox</type>
</CustomField>