unpackaged/main/default/objects/shop__c/fields/similarweb_bounce_rate__c.field-meta.xml
<CustomField>
    <fullName>similarweb_bounce_rate__c</fullName>
    <description>all fields related to https://tracker.trustedshops.com/browse/PO-622</description>
    <label>Similarweb Bounce Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>