unpackaged/main/default/objects/shop__c/fields/similarweb_category__c.field-meta.xml
<CustomField>
    <fullName>similarweb_category__c</fullName>
    <label>Similarweb Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>