unpackaged/main/default/objects/shop__c/fields/similarweb_country_rank__c.field-meta.xml
<CustomField>
    <fullName>similarweb_country_rank__c</fullName>
    <label>Similarweb Country Rank</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>