unpackaged/main/default/objects/shop__c/fields/similarweb_global_rank__c.field-meta.xml
<CustomField>
    <fullName>similarweb_global_rank__c</fullName>
    <description>former name: Similar Web Rating</description>
    <label>Similarweb Global Rank</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>