unpackaged/main/default/objects/shop__c/fields/similarweb_organic_search_share__c.field-meta.xml
<CustomField>
    <fullName>similarweb_organic_search_share__c</fullName>
    <label>Similarweb Organic Search Traffic Share</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>