unpackaged/main/default/objects/shop__c/fields/similarweb_page_per_visit__c.field-meta.xml
<CustomField>
    <fullName>similarweb_page_per_visit__c</fullName>
    <label>Similarweb Page per Visit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>