unpackaged/main/default/objects/shop__c/fields/similarweb_paid_search_share__c.field-meta.xml
<CustomField>
    <fullName>similarweb_paid_search_share__c</fullName>
    <description>all fields related to https://tracker.trustedshops.com/browse/PO-622</description>
    <label>Similarweb Paid Search Traffic Share</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>