unpackaged/main/default/objects/shop__c/fields/similarweb_referrals_traffic_share__c.field-meta.xml
<CustomField>
    <fullName>similarweb_referrals_traffic_share__c</fullName>
    <label>Similarweb Referrals Traffic Share</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>