unpackaged/main/default/objects/shop__c/fields/similarweb_time_on_site__c.field-meta.xml
<CustomField>
    <fullName>similarweb_time_on_site__c</fullName>
    <description>former name: Similarweb Average visit duration</description>
    <label>Similarweb Time on Site</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>