unpackaged/main/default/objects/shop__c/fields/similarweb_unique_visitors__c.field-meta.xml
<CustomField>
    <fullName>similarweb_unique_visitors__c</fullName>
    <label>Similarweb Unique Visitors</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>