unpackaged/main/default/objects/shop__c/fields/sistrix_rank__c.field-meta.xml
<CustomField>
    <fullName>sistrix_rank__c</fullName>
    <label>Sistrix Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>