unpackaged/main/default/objects/shop__c/fields/standard_integration_creation_date__c.field-meta.xml
<CustomField>
    <fullName>standard_integration_creation_date__c</fullName>
    <label>Last known Standard Integration Date</label>
    <type>Date</type>
</CustomField>