unpackaged/main/default/objects/shop__c/fields/standard_integration_status__c.field-meta.xml
<CustomField>
    <fullName>standard_integration_status__c</fullName>
    <label>Standard Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>