unpackaged/main/default/objects/shop__c/fields/sync_Record__c.field-meta.xml
<CustomField>
    <fullName>sync_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sync Record?</label>
    <type>Checkbox</type>
</CustomField>